# sqldrift

./: .gitignore  LICENSE  README.md  developer.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: benchmark.py  benchmark_column.py
examples/: usage_examples.py
examples/azure_synapse/: README.md  azure_synapse_example.py
examples/bigquery/: README.md  bigquery_example.py
examples/glue_athena/: README.md  glue_athena_example.py
examples/mysql/: README.md  mysql_example.py
examples/postgresql/: README.md  postgresql_example.py
examples/redshift/: README.md  redshift_example.py
src/sqldrift/: __init__.py  column_validator.py  optimized.py  validator.py
tests/: test_column_validator.py  test_validator.py
